# klasifikasi-rice-disease

./: README.md  pyproject.toml
src/klasifikasi/: app.py
