[project]
name = "klasifikasi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "anishawlnddari", email = "anishawulandarip@gmail.com"},
]
dependencies = [
    "streamlit>=1.45.1",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "numpy>=1.26,<2.2",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "tqdm>=4.67.1"
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
